--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,16 @@ body {
     background-color: #d9dcd6;
 }
 
+/*styling for entire header bar with navigation menu included*/
+
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
+
+/*styling to allow page heading (title) to appear on the same line as the navigation menu*/
 
 .header h1 {
     display: inline-block;
@@ -23,6 +27,8 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
+
+/*styling for navigation menu*/
 
 .header nav {
     padding-top: 15px;
@@ -35,6 +41,8 @@ body {
 .header nav ul {
     list-style-type: none;
 }
+
+/*makes navigational topics/links appear side by side*/
 
 .header nav ul li {
     display: inline-block;
@@ -54,6 +62,8 @@ p {
     font-size: 16px;
 }
 
+/*styling for page background image*/
+
 .hero {
     height: 800px;
     width: 100%;
@@ -62,6 +72,34 @@ p {
     background-size: cover;
     background-position: center;
 }
+
+/*styling for entire article section for seo, online reputation management, and social media marketing*/
+
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.content > section {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.content > section > img {
+    max-height: 200px;
+}
+
+.content > section > h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/*styling for section images*/
 
 .float-left {
     float: left;
@@ -73,11 +111,7 @@ p {
     margin-left: 25px;
 }
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
+/*styling for benefits aside*/
 
 .benefits {
     margin-right: 20px;
@@ -90,107 +124,22 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefits > section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefits > section > img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+.benefits > section > h3 {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
 .footer {
     padding: 30px;
